apps/monitoring/base/gateway/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
  - grafana.seigra.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kube-prometheus
    sectionName: grafana
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      namespace: monitoring
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
